name:                paprikax
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/mitsuji/paprikax#readme
license:             BSD3
license-file:        LICENSE
author:              Takamasa Mitsuji
maintainer:          tkms@mitsuji.org
copyright:           2016 Takamasa Mitsuji
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     System.Huckleberry.Linux.Gpio
                     , System.Huckleberry.Linux.Pwm
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable paprikax-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , paprikax
                     , distributed-process
                     , network-transport-inmemory
                     , text
                     , bytestring
                     , file-embed
                     , http-types
                     , warp
                     , wai
                     , wai-app-static
                     , wai-websockets
                     , websockets
                     , mtl
                     , containers
                     , word8
                     , binary
  default-language:    Haskell2010

--test-suite paprikax-test
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test
--  main-is:             Spec.hs
--  build-depends:       base
--                     , paprikax
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mitsuji/paprikax
