name:                paprikax
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/mitsuji/paprikax#readme
license:             BSD3
license-file:        LICENSE
author:              Takamasa Mitsuji
maintainer:          tkms@mitsuji.org
copyright:           2016 Takamasa Mitsuji
category:            Web
build-type:          Simple
cabal-version:       >=1.10
-- extra-source-files:

library
  hs-source-dirs:      src
  exposed-modules:     Paprikax
  build-depends:       base >= 4.7 && < 5
                     , huckleberry
  default-language:    Haskell2010

executable paprikax-console-ctrl-exe
  hs-source-dirs:      app
  main-is:             ConsoleCtrl.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , paprikax
  default-language:    Haskell2010

executable paprikax-wai-ctrl-exe
  hs-source-dirs:      app
  main-is:             WaiCtrl.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , paprikax
                     , distributed-process
                     , network-transport-inmemory
                     , text
                     , bytestring
                     , file-embed
                     , http-types
                     , warp
                     , wai
                     , wai-app-static
                     , wai-websockets
                     , websockets
                     , mtl
                     , containers
                     , word8
                     , binary
                     , aeson
  default-language:    Haskell2010

executable paprikax-wai-cutter-exe
  hs-source-dirs:      app
  main-is:             WaiCutter.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , paprikax
                     , distributed-process
                     , network-transport-inmemory
                     , text
                     , bytestring
                     , file-embed
                     , http-types
                     , warp
                     , wai
                     , wai-app-static
                     , wai-websockets
                     , websockets
                     , mtl
                     , containers
                     , word8
                     , binary
                     , aeson
  default-language:    Haskell2010

--test-suite paprikax-test
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test
--  main-is:             Spec.hs
--  build-depends:       base
--                     , paprikax
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mitsuji/paprikax
